# shipcheck

./: .gitignore  README.md  pyproject.toml  shipcheck.md  shipcheck.meta.json
benchmarks/: README.md  targets.json
benchmarks/results-v0.2/: Jacob-A11-Next-Supabase-Stripe.json  KolbySisk-next-supabase-stripe-starter.json  ShenSeanChen-launch-mvp-stripe-nextjs-supabase.json  SydilSohan-nextjs-supabase-stripe-starter.json  dijonmusters-build-a-saas-with-next-js-supabase-and-stripe.json  jesse-lane-ai-supabase-stripe-nextjs-template.json  mustafacagri-next-stripe-supabase-tailwind-typescript.json  saumya66-Next-Supabase-Stripe-Starter.json  summary.md
benchmarks/results-v0.3/: Jacob-A11-Next-Supabase-Stripe.json  KolbySisk-next-supabase-stripe-starter.json  ShenSeanChen-launch-mvp-stripe-nextjs-supabase.json  SydilSohan-nextjs-supabase-stripe-starter.json  dijonmusters-build-a-saas-with-next-js-supabase-and-stripe.json  jesse-lane-ai-supabase-stripe-nextjs-template.json  mustafacagri-next-stripe-supabase-tailwind-typescript.json  saumya66-Next-Supabase-Stripe-Starter.json  summary.md
benchmarks/results-v0.3-dogfood/: DanieII-instant-saas.json  Razikus-supabase-nextjs-template.json  nextjs-saas-starter.json  summary.md  trust-placeholder-review.md
benchmarks/results-v0.4-dogfood/: nextjs-saas-starter.json  (+4 more)
shipcheck/: cli.py  dedup.py  engine.py  models.py  report.py  scanner.py  scoring.py
tests/: test_auth.py  test_cli.py  test_database.py  test_dedup.py  test_payments.py  test_reliability.py  test_report.py  test_scanner.py  test_secrets.py  test_trust.py
(+50 files in other folders)
